--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Пригласи подругу на прогулку!</h1>
+        <h1>Приглашаю погулять!</h1>
         <button id="okButton">OK</button>
         <button id="noButton">NO</button>
         <div id="catContainer">
