--- a/index.html
+++ b/index.html
@@ -11,10 +11,8 @@
         <h1>Приглашаю погулять!</h1>
         <button id="okButton">OK</button>
         <button id="noButton">NO</button>
-        <div id="catContainer">
-            <img id="catImage" src="dancing_cat.gif" alt="Dancing Cat">
-        </div>
+        <img id="catImage">
     </div>
-    <script src="script.js"></script>
+    <script src="./main.js"></script>
 </body>
 </html>
