--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <h1>Приглашаю погулять!</h1>
         <button id="okButton">OK</button>
         <button id="noButton">NO</button>
-        <img id="catImage">
     </div>
+    <div> <img id="catImage" src="https://media.giphy.com/media/kocrNZBTlCiQw/giphy.gif" alt="Walking Cat"></div>
     <script src="./main.js"></script>
 </body>
 </html>
