--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <button id="okButton">OK</button>
         <button id="noButton">NO</button>
     </div>
-    <div> <img id="catImage" src="https://media.giphy.com/media/kocrNZBTlCiQw/giphy.gif" alt="Walking Cat"></div>
+    <div> <img id="catImage" src="https://media.giphy.com/media/i4ldQWj8VNnbeGDqop/giphy.gif" alt="Running Cat" alt="Walking Cat"></div>
     <script src="./main.js"></script>
 </body>
 </html>
